cmake_minimum_required(VERSION 2.8.12)
if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
    message(FATAL_ERROR "Do not build in-source. Please remove CMakeCache.txt and the CMakeFiles/ directory. Then build out-of-source.")
endif()
if(POLICY CMP0042)
    cmake_policy(SET CMP0042 NEW)
endif()
if(POLICY CMP0051)
    cmake_policy(SET CMP0051 NEW)
endif()
if(POLICY CMP0058)
    cmake_policy(SET CMP0058 NEW)
endif()
enable_language(CXX)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

set(CATCH_FILES test.cc char.cc)
add_executable(catch ${CATCH_FILES})
